--- a/sdk/game_engine_sdk/render_engine/window/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/window/CMakeLists.txt
@@ -29,7 +29,7 @@ target_include_directories(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE 
-        logger::logger
+        sdk::logger
         glfw
         glm::glm
         ${VULKAN_LIBRARY}
