--- a/sdk/game_engine_sdk/util/CMakeLists.txt
+++ b/sdk/game_engine_sdk/util/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.28)
 
 option(CMAKE_LOG_LEVEL_DEBUG "Configure using debug log level" OFF)
 
-message(STATUS "Building camera module with the following options:")
+message(STATUS "Building util module with the following options:")
 message(STATUS "    Log level: ${CMAKE_LOG_LEVEL_DEBUG}")
 message(STATUS "    Build type: ${CMAKE_BUILD_TYPE}")
 
-project(camera CXX)
+project(util CXX)
 
 file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/public/*.h")
@@ -15,7 +15,7 @@ add_library(${PROJECT_NAME}
     STATIC
         ${SOURCES}
 )
-add_library(render_engine::camera ALIAS ${PROJECT_NAME})
+add_library(sdk::util ALIAS ${PROJECT_NAME})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
 
@@ -24,8 +24,8 @@ target_include_directories(${PROJECT_NAME}
         ${CMAKE_CURRENT_SOURCE_DIR}/public
 )
 
-target_link_libraries(${PROJECT_NAME}
-    PRIVATE 
-        sdk::logger
-        glm::glm
-)
+# target_link_libraries(${PROJECT_NAME}
+#     PRIVATE 
+#         # sdk::logger
+#         # glm::glm
+# )
