chore: empty camera tests and start of making graphics pipeline its own module

--- a/sdk/game_engine_sdk/render_engine/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/CMakeLists.txt
@@ -9,6 +9,7 @@ option(RENDER_ENGINE_BUILD_CAMERA "Build the camera module" ON)
 option(RENDER_ENGINE_BUILD_TILING "Build the tiling module" ON)
 option(RENDER_ENGINE_BUILD_WINDOW "Build the window module" ON)
 option(RENDER_ENGINE_BUILD_VULKAN "Build the vulkan module" ON)
+option(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE "Build the graphics_pipeline module" ON)
 
 if(RENDER_ENGINE_BUILD_IMAGE)
     message(STATUS "Adding image module")
@@ -44,4 +45,11 @@ if(RENDER_ENGINE_BUILD_VULKAN)
 else()
     message(STATUS " Skipping vulkan module")
 endif()
+
+# if(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE)
+#     message(STATUS "Adding graphics_pipeline module")
+#     add_subdirectory(graphics_pipeline)
+# else()
+#     message(STATUS " Skipping graphics_pipeline module")
+# endif()
 
