--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(RENDER_ENGINE_BUILD_CAMERA ON CACHE BOOL "" FORCE)
 set(RENDER_ENGINE_BUILD_TILING ON CACHE BOOL "" FORCE)
 set(RENDER_ENGINE_BUILD_WINDOW ON CACHE BOOL "" FORCE)
 set(RENDER_ENGINE_BUILD_VULKAN ON CACHE BOOL "" FORCE)
+set(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE ON CACHE BOOL "" FORCE)
 add_subdirectory(sdk/game_engine_sdk)
 
 add_library(${PROJECT_NAME}
