wip: unit tests for camera module

--- a/sdk/game_engine_sdk/render_engine/camera/test/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/camera/test/CMakeLists.txt
@@ -31,6 +31,9 @@ target_link_libraries(${TEST_EXEC_NAME}
     PRIVATE
         render_engine::camera
         GTest::gtest_main
+        sdk::logger
+        sdk::util
+        glm::glm
 )
 
 target_compile_features(${TEST_EXEC_NAME} PRIVATE cxx_std_20)
