--- a/sdk/game_engine_sdk/render_engine/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/CMakeLists.txt
@@ -46,10 +46,10 @@ else()
     message(STATUS " Skipping vulkan module")
 endif()
 
-# if(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE)
-#     message(STATUS "Adding graphics_pipeline module")
-#     add_subdirectory(graphics_pipeline)
-# else()
-#     message(STATUS " Skipping graphics_pipeline module")
-# endif()
+if(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE)
+    message(STATUS "Adding graphics_pipeline module")
+    add_subdirectory(graphics_pipeline)
+else()
+    message(STATUS " Skipping graphics_pipeline module")
+endif()
 
