--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,9 +102,9 @@ if(GAME_ENGINE_SDK_BUILD_EXAMPLES)
     add_subdirectory(examples/3_tile_showcase)
     add_subdirectory(examples/4_user_interface)
     add_subdirectory(examples/5_map_generation)
+    add_subdirectory(examples/6_pathing)
     message(STATUS "Configuring examples... DONE!")
 endif()
-
 
 # Clean Target
 add_custom_target(clean-all
