--- a/sdk/game_engine_sdk/logger/CMakeLists.txt
+++ b/sdk/game_engine_sdk/logger/CMakeLists.txt
@@ -9,12 +9,23 @@ message(STATUS "    Build type: ${CMAKE_BUILD_TYPE}")
 
 project(logger CXX)
 
-add_library(${PROJECT_NAME} INTERFACE)
+file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/public/*.h")
+
+add_library(${PROJECT_NAME} 
+    STATIC
+        ${SOURCES}
+)
 add_library(sdk::logger ALIAS ${PROJECT_NAME})
 
-target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_20)
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
 
 target_include_directories(${PROJECT_NAME} 
-    INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}/public
+    PUBLIC 
+        ${CMAKE_CURRENT_SOURCE_DIR}/public
+)
+
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE 
+        glm::glm
 )
