--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,13 +98,12 @@ endif()
 if(GAME_ENGINE_SDK_BUILD_EXAMPLES)
     message(STATUS "Configuring examples...")
     add_subdirectory(examples/1_spatial_subdivision)
-    add_subdirectory(examples/2_shape_rendering)
-    add_subdirectory(examples/3_tile_showcase)
+    add_subdirectory(examples/2_text_rendering)
     add_subdirectory(examples/4_user_interface)
     add_subdirectory(examples/5_map_generation)
+    add_subdirectory(examples/6_pathing)
     message(STATUS "Configuring examples... DONE!")
 endif()
-
 
 # Clean Target
 add_custom_target(clean-all
