--- a/sdk/game_engine_sdk/render_engine/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/CMakeLists.txt
@@ -4,12 +4,20 @@ message(STATUS "Configuring render_engine modules")
 
 project(render_engine)
 
+option(RENDER_ENGINE_BUILD_FONT "Build the font module" ON)
 option(RENDER_ENGINE_BUILD_IMAGE "Build the image module" ON)
 option(RENDER_ENGINE_BUILD_CAMERA "Build the camera module" ON)
 option(RENDER_ENGINE_BUILD_TILING "Build the tiling module" ON)
 option(RENDER_ENGINE_BUILD_WINDOW "Build the window module" ON)
 option(RENDER_ENGINE_BUILD_VULKAN "Build the vulkan module" ON)
 option(RENDER_ENGINE_BUILD_GRAPHICS_PIPELINE "Build the graphics_pipeline module" ON)
+
+if(RENDER_ENGINE_BUILD_FONT)
+    message(STATUS "Adding font module")
+    add_subdirectory(font)
+else()
+    message(STATUS "Skipping font module")
+endif()
 
 if(RENDER_ENGINE_BUILD_IMAGE)
     message(STATUS "Adding image module")
