--- a/sdk/game_engine_sdk/render_engine/font/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/font/CMakeLists.txt
@@ -24,3 +24,9 @@ target_include_directories(${PROJECT_NAME}
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/public
 )
+
+
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE 
+        sdk::util
+)
