feat: triangulation tests pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ if(GAME_ENGINE_SDK_BUILD_TEST)
 endif()
 
 set(GAME_ENGINE_SDK_BUILD_RENDER_ENGINE ON CACHE BOOL "" FORCE)
+set(RENDER_ENGINE_BUILD_TRIANGULATION ON CACHE BOOL "" FORCE)
 set(RENDER_ENGINE_BUILD_FONT ON CACHE BOOL "" FORCE)
 set(RENDER_ENGINE_BUILD_IMAGE ON CACHE BOOL "" FORCE)
 set(RENDER_ENGINE_BUILD_CAMERA ON CACHE BOOL "" FORCE)
