--- a/sdk/game_engine_sdk/render_engine/triangulation/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/triangulation/CMakeLists.txt
@@ -1,14 +1,14 @@
-
 cmake_minimum_required(VERSION 3.28)
 
+option(GAME_ENGINE_SDK_BUILD_TEST "Build the unit tests" OFF)
 option(CMAKE_LOG_LEVEL_DEBUG "Configure using debug log level" OFF)
 
-message(STATUS "Building font module with the following options:")
+message(STATUS "Building triangulation module with the following options:")
 message(STATUS "    Log level: ${CMAKE_LOG_LEVEL_DEBUG}")
 message(STATUS "    Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "    Build tests: ${GAME_ENGINE_SDK_BUILD_TEST}")
 
-project(font CXX)
+project(triangulation CXX)
 
 file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/public/*.h")
@@ -17,21 +17,18 @@ add_library(${PROJECT_NAME}
     STATIC
         ${SOURCES}
 )
-add_library(render_engine::font ALIAS ${PROJECT_NAME})
+add_library(render_engine::triangulation ALIAS ${PROJECT_NAME})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
 
 target_include_directories(${PROJECT_NAME} 
-    PUBLIC
+    PUBLIC 
         ${CMAKE_CURRENT_SOURCE_DIR}/public
 )
-
 
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
         sdk::util
-    PRIVATE 
-        render_engine::triangulation
 )
 
 if(GAME_ENGINE_SDK_BUILD_TEST)
