--- a/sdk/game_engine_sdk/render_engine/graphics_pipeline/CMakeLists.txt
+++ b/sdk/game_engine_sdk/render_engine/graphics_pipeline/CMakeLists.txt
@@ -61,4 +61,5 @@ target_link_libraries(${PROJECT_NAME}
         glm::glm
         render_engine::vulkan
         render_engine::font
+        render_engine::triangulation
 )
